--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,7 +52,6 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 #
 
 set -g @tpm_plugins 'arcticicestudio/nord-tmux' # an arctic, north-bluish theme
-set -g status-right ""
 #
 # Bindigs
 #
@@ -83,7 +82,8 @@ bind -n S-Right next-window
 # Settings
 #
 
-set-option -g status-position bottom
+set-option -g status-position top
+
 set-option -g default-shell /opt/homebrew/bin/fish
 set-option -g set-clipboard on
 set -g mouse on
@@ -123,3 +123,7 @@ bind % split-window -h -c "#{pane_current_path}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# keep this line after run '~/.tmux/plugins/tpm/tpm'
+set -g status-right ''
+
