--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -859,7 +859,8 @@ copy_on_select yes
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-# placement_strategy center
+ placement_strategy center
+ # placement_strategy top-left
 
 #: When the window size is not an exact multiple of the cell size, the
 #: cell area of the terminal window will have some extra padding on
