--- a/RectangleConfig.json
+++ b/RectangleConfig.json
@@ -1,6 +1,9 @@
 {
   "bundleId" : "com.knollsoft.Rectangle",
   "defaults" : {
+    "SUEnableAutomaticChecks" : {
+      "bool" : true
+    },
     "allowAnyShortcut" : {
       "bool" : false
     },
@@ -10,11 +13,11 @@
     "almostMaximizeWidth" : {
       "float" : 0
     },
-    "alternateDefaultShortcuts" : {
-      "bool" : true
-    },
     "altThirdCycle" : {
       "int" : 0
+    },
+    "alternateDefaultShortcuts" : {
+      "bool" : true
     },
     "alwaysAccountForStage" : {
       "int" : 0
@@ -34,10 +37,10 @@
     "cascadeAllDeltaSize" : {
       "float" : 30
     },
-    "centeredDirectionalMove" : {
+    "centerHalfCycles" : {
       "int" : 0
     },
-    "centerHalfCycles" : {
+    "centeredDirectionalMove" : {
       "int" : 0
     },
     "cornerSnapAreaSize" : {
@@ -45,6 +48,9 @@
     },
     "curtainChangeSize" : {
       "int" : 0
+    },
+    "cycleSizesIsChanged" : {
+      "bool" : false
     },
     "disabledApps" : {
 
@@ -84,6 +90,9 @@
     },
     "gapSize" : {
       "float" : 0
+    },
+    "hapticFeedbackOnSnap" : {
+      "int" : 0
     },
     "hideMenubarIcon" : {
       "bool" : true
@@ -145,11 +154,17 @@
     "screenEdgeGapRight" : {
       "float" : 0
     },
+    "screenEdgeGapTop" : {
+      "float" : 0
+    },
+    "screenEdgeGapTopNotch" : {
+      "float" : 0
+    },
     "screenEdgeGapsOnMainScreenOnly" : {
       "bool" : false
     },
-    "screenEdgeGapTop" : {
-      "float" : 0
+    "selectedCycleSizes" : {
+      "int" : 0
     },
     "shortEdgeSnapAreaSize" : {
       "float" : 145
@@ -190,11 +205,11 @@
     "subsequentExecutionMode" : {
       "int" : 1
     },
-    "SUEnableAutomaticChecks" : {
-      "bool" : false
-    },
     "systemWideMouseDown" : {
       "int" : 0
+    },
+    "systemWideMouseDownApps" : {
+
     },
     "todo" : {
       "int" : 0
@@ -224,19 +239,23 @@
   "shortcuts" : {
     "almostMaximize" : {
       "keyCode" : 15,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     },
     "bottomHalf" : {
       "keyCode" : 38,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     },
     "center" : {
       "keyCode" : 8,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     },
     "centerHalf" : {
       "keyCode" : 3,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
+    },
+    "centerThird" : {
+      "keyCode" : 3,
+      "modifierFlags" : 786432
     },
     "firstThird" : {
       "keyCode" : 16,
@@ -248,7 +267,7 @@
     },
     "larger" : {
       "keyCode" : 5,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     },
     "lastThird" : {
       "keyCode" : 31,
@@ -260,19 +279,23 @@
     },
     "leftHalf" : {
       "keyCode" : 4,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     },
     "maximize" : {
       "keyCode" : 46,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     },
     "maximizeHeight" : {
       "keyCode" : 17,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     },
     "nextDisplay" : {
       "keyCode" : 45,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
+    },
+    "previousDisplay" : {
+      "keyCode" : 35,
+      "modifierFlags" : 917504
     },
     "reflowTodo" : {
       "keyCode" : 45,
@@ -280,15 +303,15 @@
     },
     "restore" : {
       "keyCode" : 9,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     },
     "rightHalf" : {
       "keyCode" : 37,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     },
     "smaller" : {
       "keyCode" : 11,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     },
     "toggleTodo" : {
       "keyCode" : 11,
@@ -296,8 +319,8 @@
     },
     "topHalf" : {
       "keyCode" : 40,
-      "modifierFlags" : 1966080
+      "modifierFlags" : 917504
     }
   },
-  "version" : "81"
+  "version" : "91"
 }
