--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,9 +16,11 @@ map cmd+v paste_from_clipboard
 #: characters.
 
 # font_family      Share Tech Mono
-font_family     ShureTechMono Nerd Font
-bold_font        Share Tech Mono
-symbol_map U+0066 Share Tech Mono
+# font_family     ShureTechMono Nerd Font
+font_family ShureTechMono Nerd Font Mono
+
+# bold_font        Share Tech Mono
+# symbol_map U+0066 Share Tech Mono
 # italic_font      auto
 # bold_italic_font auto
 
