--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,7 +84,7 @@ bind -n S-Right next-window
 
 set-option -g status-position top
 
-set-option -g default-shell /opt/homebrew/bin/fish
+set-option -g default-shell /usr/local/bin/fish
 set-option -g set-clipboard on
 set -g mouse on
 setw -g aggressive-resize on
