--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,7 +56,7 @@ set -g @tpm_plugins 'arcticicestudio/nord-tmux' # an arctic, north-bluish theme
 # Bindigs
 #
 
-# Use Ctrl-j as the prefix instead of default Ctrl-b
+# Use Ctrl-a as the prefix instead of default Ctrl-b
 set-option -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
@@ -64,6 +64,7 @@ bind-key C-a send-prefix
 # Ctrl-j r to reload this config
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+bind R move-window -r
 
 # <Prefix> X for killing a session
 bind-key X kill-session
@@ -83,6 +84,8 @@ bind -n S-Right next-window
 #
 
 set-option -g status-position top
+set-option -g renumber-windows on
+set -g base-index 1
 
 set-option -g default-shell /usr/local/bin/fish
 set-option -g set-clipboard on
