--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,7 +98,12 @@ set-option -sg escape-time 10
 # This is required for vim colors to work correctly when ssh-ing to one server,
 # running tmux on it, and then in one pane ssh-ing to a different server. If
 # this is not set, that latter pane will not have proper colors in vim.
-set -g default-terminal "screen-256color"
+# 🐱 Kitty-совместимая настройка:
+set -g default-terminal "xterm-kitty"
+set -ga terminal-overrides ",xterm-kitty:Tc"
+
+# Включить поддержку pass-through escape-последовательностей для kitty icat
+set -gq allow-passthrough all
 
 # Apparently helps with nvim compatibility; not sure why this is needed
 set -g focus-events on
@@ -129,4 +134,3 @@ run '~/.tmux/plugins/tpm/tpm'
 
 # keep this line after run '~/.tmux/plugins/tpm/tpm'
 set -g status-right ''
-
