--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -127,6 +127,7 @@ keymap = [
 	{ on = [ "g", "h" ],       run = "cd ~",             desc = "Go home" },
 	{ on = [ "g", "c" ],       run = "cd ~/.config",     desc = "Go ~/.config" },
 	{ on = [ "g", "d" ],       run = "cd ~/Downloads",   desc = "Go ~/Downloads" },
+	{ on = [ "g", "D" ],       run = "cd ~/dev",   desc = "Go ~/dev" },
 	{ on = [ "g", "<Space>" ], run = "cd --interactive", desc = "Jump interactively" },
 	{ on = [ "g", "f" ],       run = "follow",           desc = "Follow hovered symlink" },
 
@@ -155,6 +156,15 @@ keymap = [
 	# Help
 	{ on = "~",    run = "help", desc = "Open help" },
 	{ on = "<F1>", run = "help", desc = "Open help" },
+]
+prepend_keymap = [
+    # glow.yazi
+    { on = ["<S-j>"], run = "seek 5" },
+    { on = ["<S-k>"], run = "seek -5" },
+    { on = ["<C-y>"], run = "plugin system-clipboard" },
+    { on   = "T", run  = "plugin toggle-pane max-preview", desc = "Maximize or restore the preview pane" },
+    { on = [ "g", "i" ], run  = "plugin lazygit", desc = "run lazygit"},
+    # { on = ["d", "u"], run = "plugin restore", desc = "Restore last deleted files/folders" },
 ]
 
 [tasks]
