--- a/yazi/theme.toml
+++ b/yazi/theme.toml
@@ -78,8 +78,8 @@ unset_alt  = { fg = "red", bg = "gray" }
 # : Status bar {{{
 
 [status]
-overall   = {}
-sep_left  = { open = "", close = "" }
+overall = { fg = "#D8DEE9", bg = "#2E3440", bold = true }
+sep_left = { open = "", close = "" }
 sep_right = { open = "", close = "" }
 
 # Permissions
