--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -166,7 +166,7 @@ prepend_keymap = [
     { on = [ "g", "i" ], run  = "plugin lazygit", desc = "Run lazygit"},
     { on = "t", run  = "plugin smart-tab", desc = "Create a tab and enter the hovered directory"},
     { on = [ "g", "r" ], run  = 'shell -- ya emit cd "$(git rev-parse --show-toplevel)"', desc = "Go root of the current Git repository"},
-    { on = "q", run  = "plugin confirm-quit", desc = "Confirm before quitting if multiple tabs are open"},
+    # { on = "q", run  = "plugin confirm-quit", desc = "Confirm before quitting if multiple tabs are open"},
     # { on = ["d", "u"], run = "plugin restore", desc = "Restore last deleted files/folders" },
 ]
 
