--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -166,7 +166,7 @@ prepend_keymap = [
     { on = [ "g", "i" ], run  = "plugin lazygit", desc = "Run lazygit"},
     { on = "t", run  = "plugin smart-tab", desc = "Create a tab and enter the hovered directory"},
     { on = [ "g", "r" ], run  = 'shell -- ya emit cd "$(git rev-parse --show-toplevel)"', desc = "Go root of the current Git repository"},
-    { on = [ "c", "a" ], run  = "plugin compress", desc = "Archive selected files"},
+    { on = [ "c", "a" ], run  = "plugin ouch", desc = "Archive selected files"},
     { on = "f", run  = "plugin smart-filter", desc = "Smart filter"},
 
     # { on = "q", run  = "plugin confirm-quit", desc = "Confirm before quitting if multiple tabs are open"},
