--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,8 @@ set -g @scroll-speed-num-lines-per-scroll "1"
 # - automatic restore when tmux is started
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'akohlbecker/aw-watcher-tmux'
+
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'kitty'
