chore(kitty): update font configuration for better readability

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -17,7 +17,12 @@ map cmd+v paste_from_clipboard
 
 # font_family      Share Tech Mono
 # font_family     ShureTechMono Nerd Font
+#
+# Основной моноширинный шрифт
 font_family ShureTechMono Nerd Font Mono
+
+# Кириллица → Cascadia Code
+symbol_map U+0400-U+04FF JetBrainsMono Nerd Font
 
 # bold_font        Share Tech Mono
 # symbol_map U+0066 Share Tech Mono
@@ -953,7 +958,7 @@ hide_window_decorations yes
 #: insensitive, from the set 0-9A-Z\-=[];',./\\`. Specify your
 #: preference as a string of characters.
 
-confirm_os_window_close 0 
+confirm_os_window_close 0
 
 #: Ask for confirmation when closing an OS window or a tab with at
 #: least this number of kitty windows in it by window manager (e.g.
