chore(tmux.conf): correct plugin declaration for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,7 +53,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # Theme
 #
 
-set -g @tpm_plugins 'arcticicestudio/nord-tmux' # an arctic, north-bluish theme
+set -g plugins 'arcticicestudio/nord-tmux' # an arctic, north-bluish theme
 #
 # Bindigs
 #
@@ -131,9 +131,10 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
 # keep this line after run '~/.tmux/plugins/tpm/tpm'
 set -g status-right ''
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
 
