refactor(nvim): reorganize neo-tree mappings for better usability

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,10 +50,12 @@ set -g @continuum-boot-options 'kitty'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+#
 # Theme
 #
 
-set -g plugins 'arcticicestudio/nord-tmux' # an arctic, north-bluish theme
+set -g @plugin 'arcticicestudio/nord-tmux' # an arctic, north-bluish theme
+
 #
 # Bindigs
 #
