--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,7 @@
 include ./nord.conf
 
 allow_remote_control yes
+
 map cmd+equal change_font_size all +2.0
 map cmd+minus change_font_size all -2.0
 map cmd+0 change_font_size all 0
@@ -1381,7 +1382,7 @@ background            #2e3440
 #: See rc_custom_auth <https://sw.kovidgoyal.net/kitty/remote-
 #: control/#rc-custom-auth> for details.
 
-allow_remote_control no
+# allow_remote_control no
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
