fix: fish rust errot

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -19,10 +19,18 @@ map cmd+v paste_from_clipboard
 # font_family      Share Tech Mono
 # font_family     ShureTechMono Nerd Font
 #
-# Основной моноширинный шрифт
-font_family ShureTechMono Nerd Font Mono
 
-# Кириллица → Cascadia Code
+# Основной шрифт (моноширинный)
+font_family        ShureTechMono Nerd Font Mono
+
+# Жирный текст
+# bold_font          ShureTechMono Nerd Font Mono
+# Курсив
+# italic_font        Monoid Italic
+# Жирный курсив
+# bold_italic_font    ShureTechMono Nerd Font Mono
+
+# (опционально) Кириллица — если основной не поддерживает
 symbol_map U+0400-U+04FF JetBrainsMono Nerd Font
 
 # bold_font        Share Tech Mono
