chore(fish): move environment variables to separate env.fish file

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -32,6 +32,7 @@ font_family        ShureTechMono Nerd Font Mono
 
 # (опционально) Кириллица — если основной не поддерживает
 symbol_map U+0400-U+04FF JetBrainsMono Nerd Font
+symbol_map U+E000-U+F8FF JetBrainsMono Nerd Font
 
 # bold_font        Share Tech Mono
 # symbol_map U+0066 Share Tech Mono
@@ -195,6 +196,7 @@ font_size 18
 
 #:     modify_font cell_width 80%
 #:     modify_font cell_height -2px
+modify_font cell_height 105%
 #:     modify_font baseline 3
 
 #: Note that modifying the baseline will automatically adjust the
@@ -381,7 +383,7 @@ font_size 18
 #: and Wayland. Use negative numbers to change scroll direction. See
 #: also wheel_scroll_min_lines.
 
-# wheel_scroll_min_lines 1
+wheel_scroll_min_lines 1
 
 #: The minimum number of lines scrolled by the mouse wheel. The scroll
 #: multiplier wheel_scroll_multiplier only takes effect after it
@@ -876,6 +878,7 @@ copy_on_select yes
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
  placement_strategy center
+
  # placement_strategy top-left
 
 #: When the window size is not an exact multiple of the cell size, the
@@ -951,7 +954,7 @@ hide_window_decorations yes
 #: number is used so that kitty is "ready" quickly after the end of
 #: resizing, while not also continuously redrawing, to save energy.
 
-# resize_in_steps no
+resize_in_steps yes
 
 #: Resize the OS window in steps as large as the cells, instead of
 #: with the usual pixel accuracy. Combined with initial_window_width
@@ -1181,7 +1184,7 @@ background            #2e3440
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-# background_blur 0
+# background_blur 64
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
