feat(sesh): define default session startup command and preview command

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -954,7 +954,7 @@ hide_window_decorations yes
 #: number is used so that kitty is "ready" quickly after the end of
 #: resizing, while not also continuously redrawing, to save energy.
 
-resize_in_steps yes
+# resize_in_steps yes
 
 #: Resize the OS window in steps as large as the cells, instead of
 #: with the usual pixel accuracy. Combined with initial_window_width
@@ -1160,7 +1160,7 @@ background            #2e3440
 #: The foreground and background colors.
 
 #background_opacity 0.945
-# background_opacity 0.9
+background_opacity 0.8
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1184,7 +1184,7 @@ background            #2e3440
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-# background_blur 64
+ background_blur 40
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
