--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,6 @@ set -g @plugin 'akohlbecker/aw-watcher-tmux'
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'kitty'
-# set -g @continuum-boot-options 'iterm'
 
 ### https://github.com/tmux-plugins/tmux-resurrect
 #
@@ -54,7 +53,9 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # Theme
 #
 
-set -g @plugin 'arcticicestudio/nord-tmux' # an arctic, north-bluish theme
+set -g @plugin 'arcticicestudio/nord-tmux'
+set -g status-left-length 40
+set -g status-left '#S '
 
 #
 # Bindigs
@@ -65,7 +66,7 @@ set-option -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
-# Ctrl-j r to reload this config
+# Ctrl-a r to reload this config
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 bind R move-window -r
@@ -139,20 +140,21 @@ run '~/.tmux/plugins/tpm/tpm'
 set -g status-right ''
 
 unbind-key g
-# fzf popup for sesh session selection
-bind-key "g" run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 80%,70% \
-    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
-    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-    --bind 'tab:down,btab:up' \
-    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
-    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
-    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
-    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
-    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
-    --preview-window 'right:55%' \
-    --preview 'sesh preview {}'
-)\""
-
+bind-key "g" run-shell "tmux run-shell \"sesh connect \\\"$(
+  sesh list --icons | fzf-tmux -p 100%,100% \
+    --no-sort --ansi \
+    --border-label=' sesh ' --prompt='⚡  ' \
+    --header='  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind='tab:down,btab:up' \
+    --bind='ctrl-a:change-prompt(⚡)+reload(sesh list --icons)' \
+    --bind='ctrl-t:change-prompt(🪟)+reload(sesh list -t --icons)' \
+    --bind='ctrl-g:change-prompt(⚙️)+reload(sesh list -c --icons)' \
+    --bind='ctrl-x:change-prompt(📁)+reload(sesh list -z --icons)' \
+    --bind='ctrl-f:change-prompt(🔎)+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind='ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡)+reload(sesh list --icons)' \
+    --preview-window='right:65%' \
+    --preview='sesh preview {}' \
+    --color=border:#81A1C1 \
+  )\\\"\"
+"
 
