chore(tmux): remove unnecessary key bindings for pane control

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,66 +1,49 @@
 #
 # Plugins
 #
-
 set -g @plugin 'tmux-plugins/tpm'
 
 ### https://github.com/tmux-plugins/tmux-sessionist
-#
-# - prefix + g - prompts for session name and switches to it. Performs 'kind-of' name completion.
-#                Faster than the built-in prefix + s prompt for long session lists.
 # - prefix + C - prompt for creating a new session by name.
 # - prefix + X - kill current session without detaching tmux.
 # - prefix + S - switches to the last session.
 #                The same as built-in prefix + L that everyone seems to override with some other binding.
 # - prefix + @ - promote current pane into a new session.
 #                Analogous to how prefix + ! breaks current pane to a new window.
-
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 
-### https://github.com/tmux-plugins/tmux-yank
-#
-# Copy to the system clipboard in tmux.
-
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-set -g @scroll-speed-num-lines-per-scroll "1"
-
-### https://github.com/tmux-plugins/tmux-continuum
-#
-# - continuous saving of tmux environment
-# - automatic tmux start when computer/server is turned on
-# - automatic restore when tmux is started
-
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'akohlbecker/aw-watcher-tmux'
-
-set -g @continuum-restore 'on'
-set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'kitty'
-
 ### https://github.com/tmux-plugins/tmux-resurrect
-#
 # This plugin goes to great lengths to save and restore all the details from your tmux environment.
 #
 # Key bindings
 #
 # - prefix + Ctrl-s - save
 # - prefix + Ctrl-r - restore
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+# Copy to the system clipboard in tmux.
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+
+set -g @plugin 'akohlbecker/aw-watcher-tmux'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'kitty'
 
 #
 # Theme
 #
-
+# Подключение темы
 set -g @plugin 'arcticicestudio/nord-tmux'
-set -g status-left-length 40
-set -g status-left '#S '
 
-#
+set -g status-left-length 60
+set -g status-left '#[fg=#2E3440,bg=#81A1C1,nobold] #S #[fg=#81A1C1,bg=#3B4252,nobold]#[default]'
+
 # Bindigs
 #
-
 # Use Ctrl-a as the prefix instead of default Ctrl-b
 set-option -g prefix C-a
 unbind-key C-b
@@ -84,10 +67,15 @@ bind -n M-Down select-pane -D \; display-pane
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# When creating a new window or pane, automatically change to the directory of
+# the current window or pane.
+bind c new-window -c "#{pane_current_path}"
+bind '=' split-window -c "#{pane_current_path}"
+bind Enter split-window -h -c "#{pane_current_path}"
+
 #
 # Settings
 #
-
 set-option -g status-position top
 set-option -g renumber-windows on
 set -g base-index 1
@@ -96,25 +84,21 @@ set-option -g default-shell /usr/local/bin/fish
 set-option -g set-clipboard on
 set -g mouse on
 setw -g aggressive-resize on
+set -g @scroll-speed-num-lines-per-scroll "1"
 
-# NeoVim stuff
-set-option -sg escape-time 10
 
 # This is required for vim colors to work correctly when ssh-ing to one server,
 # running tmux on it, and then in one pane ssh-ing to a different server. If
 # this is not set, that latter pane will not have proper colors in vim.
-# 🐱 Kitty-совместимая настройка:
 set -g default-terminal "xterm-kitty"
 set -ga terminal-overrides ",xterm-kitty:Tc"
-
-# Включить поддержку pass-through escape-последовательностей для kitty icat
 set -gq allow-passthrough all
 
 # Apparently helps with nvim compatibility; not sure why this is needed
 set -g focus-events on
 
 # Helps with hitting escape key lag in vim
-set -sg escape-time 0
+set -sg escape-time 0 # or maybe 10
 
 # bigger history size
 set -g history-limit 50000
@@ -128,13 +112,14 @@ set -g status-interval 5
 # Use vim keybindings for navigating copy mode
 setw -g mode-keys vi
 
-# When creating a new window or pane, automatically change to the directory of
-# the current window or pane.
-bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
+# TPM
 run '~/.tmux/plugins/tpm/tpm'
+
+# remove unwanted pain-control binds
+unbind |
+unbind -
+unbind \\
+unbind _
 
 # keep this line after run '~/.tmux/plugins/tpm/tpm'
 set -g status-right ''
