chore(tmux): remove unused wezterm configuration file

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,13 +28,11 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'akohlbecker/aw-watcher-tmux'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'kitty'
 
-#
 # Theme
 #
 # Подключение темы
@@ -114,6 +112,7 @@ unbind _
 # keep this line after run '~/.tmux/plugins/tpm/tpm'
 set -g status-right ''
 
+# sesh window
 unbind-key g
 bind-key "g" run-shell "tmux run-shell \"sesh connect \\\"$(
   sesh list --icons | fzf-tmux -p 100%,100% \
