--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -61,6 +61,10 @@ bind c new-window -c "#{pane_current_path}"
 bind '=' split-window -c "#{pane_current_path}"
 bind Enter split-window -h -c "#{pane_current_path}"
 
+# Next and previous window
+bind Up previous-window
+bind Down next-window
+
 # Settings
 #
 set-option -g status-position top
