chore(tmux): update key bindings for sesh connection

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -116,20 +116,20 @@ unbind _
 set -g status-right ''
 
 # sesh window
-unbind-key g
-bind-key "g" run-shell "tmux run-shell \"sesh connect \\\"$(
+unbind-key s
+bind-key "s" run-shell "tmux run-shell \"sesh connect \\\"$(
   sesh list --icons | fzf-tmux -p 100%,100% \
     --no-sort --ansi \
     --border-label=' sesh ' --prompt='⚡  ' \
-    --header='  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --header='^a all|^t tmux|^g cfgs|^x s|^x kill|^f find' \
     --bind='tab:down,btab:up' \
     --bind='ctrl-a:change-prompt(⚡)+reload(sesh list --icons)' \
     --bind='ctrl-t:change-prompt(🪟)+reload(sesh list -t --icons)' \
     --bind='ctrl-g:change-prompt(⚙️)+reload(sesh list -c --icons)' \
-    --bind='ctrl-x:change-prompt(📁)+reload(sesh list -z --icons)' \
+    --bind='ctrl-s:change-prompt(📁)+reload(sesh list -z --icons)' \
     --bind='ctrl-f:change-prompt(🔎)+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind='ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡)+reload(sesh list --icons)' \
-    --preview-window='right:65%' \
+    --bind='ctrl-x:execute(tmux kill-session -t {2..})+change-prompt(⚡)+reload(sesh list --icons)' \
+    --preview-window='right:68%' \
     --preview='sesh preview {}' \
     --color=border:#81A1C1 \
   )\\\"\"
