style(tmux): update header formatting in session list

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -121,7 +121,7 @@ bind-key "s" run-shell "tmux run-shell \"sesh connect \\\"$(
   sesh list --icons | fzf-tmux -p 100%,100% \
     --no-sort --ansi \
     --border-label=' sesh ' --prompt='⚡  ' \
-    --header='^a all|^t tmux|^g cfgs|^x s|^x kill|^f find' \
+    --header='^a-all ^t-tmux ^g-cfgs ^s-z ^x-kill ^f-find' \
     --bind='tab:down,btab:up' \
     --bind='ctrl-a:change-prompt(⚡)+reload(sesh list --icons)' \
     --bind='ctrl-t:change-prompt(🪟)+reload(sesh list -t --icons)' \
