feat(nvim): add image.nvim plugin for enhanced image handling

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -30,8 +30,12 @@ font_family        ShureTechMono Nerd Font Mono
 # Жирный курсив
 # bold_italic_font    ShureTechMono Nerd Font Mono
 
-# (опционально) Кириллица — если основной не поддерживает
+# Cyrillic
+# symbol_map U+0400-U+04FF SF Mono
 symbol_map U+0400-U+04FF JetBrainsMono Nerd Font
+
+#
+# Nerd Font Icons
 symbol_map U+E000-U+F8FF JetBrainsMono Nerd Font
 
 # bold_font        Share Tech Mono
