--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,7 +24,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Copy to the system clipboard in tmux.
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-
 set -g @plugin 'akohlbecker/aw-watcher-tmux'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -84,6 +83,9 @@ set -g @scroll-speed-num-lines-per-scroll "1"
 set -g default-terminal "xterm-kitty"
 set -ga terminal-overrides ",xterm-kitty:Tc"
 set -gq allow-passthrough all
+
+# https://github.com/3rd/image.nvim/blob/master/README.md#tmux
+set -g visual-activity off
 
 # Apparently helps with nvim compatibility; not sure why this is needed
 set -g focus-events on
