refactor(yazi): enhance yatline setup with new styling options

--- a/starship.toml
+++ b/starship.toml
@@ -1,1 +1,15 @@
-command_timeout = 99000
+# Get editor completions based on the config schema
+"$schema" = 'https://starship.rs/config-schema.json'
+
+# Inserts a blank line between shell prompts
+add_newline = true
+
+[character] # The name of the module we are configuring is 'character'
+success_symbol = '[](bold red)[](bold green)[](bold yellow)[  ](blue)'
+error_symbol = '[](bold red)[](bold red)[](bold red)[  ](blue)'
+
+vimcmd_symbol = '[](bold green)[](bold yellow)[](bold red)[  ](blue)'
+vimcmd_visual_symbol = '[](bold yellow)[](bold yellow)[](bold yellow)[  ](blue)'
+vimcmd_replace_symbol = '[](bold purple)[](bold purple)[](bold purple)[  ](blue)'
+vimcmd_replace_one_symbol = '[](bold purple)[](bold purple)[](bold purple)[  ](blue)'
+
