--- a/yazi/package.toml
+++ b/yazi/package.toml
@@ -43,5 +43,10 @@ use = "yazi-rs/plugins:no-status"
 rev = "4b027c7"
 hash = "513a23ac28e1eaa626f3a1bb6c8130d0"
 
+[[plugin.deps]]
+use = "yazi-rs/plugins:jump-to-char"
+rev = "aeca767"
+hash = "30fc0b37f03a597b92d387268319450f"
+
 [flavor]
 deps = []
