--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1164,7 +1164,7 @@ background            #2e3440
 #: The foreground and background colors.
 
 #background_opacity 0.945
-background_opacity 0.8
+# background_opacity 0.8
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
