--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,11 +24,12 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Copy to the system clipboard in tmux.
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-
 set -g @plugin 'akohlbecker/aw-watcher-tmux'
+
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+# set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
@@ -37,7 +38,6 @@ set -g @continuum-boot-options 'kitty'
 #
 # Theme
 #
-# Подключение темы
 set -g @plugin 'arcticicestudio/nord-tmux'
 
 set -g status-left-length 60
@@ -114,8 +114,8 @@ unbind _
 # keep this line after run '~/.tmux/plugins/tpm/tpm'
 set -g status-right ''
 
-unbind-key g
-bind-key "g" run-shell "tmux run-shell \"sesh connect \\\"$(
+unbind-key s
+bind-key "s" run-shell "tmux run-shell \"sesh connect \\\"$(
   sesh list --icons | fzf-tmux -p 100%,100% \
     --no-sort --ansi \
     --border-label=' sesh ' --prompt='⚡  ' \
