refactor(tmux): clean up configuration for better readability

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,17 +25,13 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @plugin 'akohlbecker/aw-watcher-tmux'
-
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-
 set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'kitty'
 
-#
 # Theme
 #
 set -g @plugin 'arcticicestudio/nord-tmux'
@@ -64,6 +60,10 @@ bind c new-window -c "#{pane_current_path}"
 bind '=' split-window -c "#{pane_current_path}"
 bind Enter split-window -h -c "#{pane_current_path}"
 
+# Next and previous window
+bind Up previous-window
+bind Down next-window
+
 # Settings
 #
 set-option -g status-position top
@@ -83,6 +83,9 @@ set -g @scroll-speed-num-lines-per-scroll "1"
 set -g default-terminal "xterm-kitty"
 set -ga terminal-overrides ",xterm-kitty:Tc"
 set -gq allow-passthrough all
+
+# https://github.com/3rd/image.nvim/blob/master/README.md#tmux
+set -g visual-activity off
 
 # Apparently helps with nvim compatibility; not sure why this is needed
 set -g focus-events on
@@ -114,20 +117,21 @@ unbind _
 # keep this line after run '~/.tmux/plugins/tpm/tpm'
 set -g status-right ''
 
+# sesh window
 unbind-key s
 bind-key "s" run-shell "tmux run-shell \"sesh connect \\\"$(
   sesh list --icons | fzf-tmux -p 100%,100% \
     --no-sort --ansi \
     --border-label=' sesh ' --prompt='⚡  ' \
-    --header='  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --header='^a-all ^t-tmux ^g-cfgs ^s-z ^x-kill ^f-find' \
     --bind='tab:down,btab:up' \
     --bind='ctrl-a:change-prompt(⚡)+reload(sesh list --icons)' \
     --bind='ctrl-t:change-prompt(🪟)+reload(sesh list -t --icons)' \
     --bind='ctrl-g:change-prompt(⚙️)+reload(sesh list -c --icons)' \
-    --bind='ctrl-x:change-prompt(📁)+reload(sesh list -z --icons)' \
+    --bind='ctrl-s:change-prompt(📁)+reload(sesh list -z --icons)' \
     --bind='ctrl-f:change-prompt(🔎)+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind='ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡)+reload(sesh list --icons)' \
-    --preview-window='right:65%' \
+    --bind='ctrl-x:execute(tmux kill-session -t {2..})+change-prompt(⚡)+reload(sesh list --icons)' \
+    --preview-window='right:68%' \
     --preview='sesh preview {}' \
     --color=border:#81A1C1 \
   )\\\"\"
