feat(tmux): enable automatic window renaming with current command and path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,7 +54,9 @@ bind-key C-a send-prefix
 # Ctrl-a r to reload this config
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
-bind R move-window -r
+
+set -g automatic-rename            on
+set -g automatic-rename-format     '#{pane_current_command} /#{b:pane_current_path}'
 
 # <Prefix> X for killing a session
 bind-key X kill-session
