--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,6 +7,7 @@ map cmd+minus change_font_size all -2.0
 map cmd+0 change_font_size all 0
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
+map ctrl+enter send_text all "\x1b[13;5u" # for fish accept-autosuggestion execute
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
