--- a/.tmux.conf
+++ b/.tmux.conf
@@ -121,14 +121,14 @@ unbind-key s
 bind-key "s" run-shell "tmux run-shell \"sesh connect \\\"$(
   sesh list --icons | fzf-tmux -p 100%,100% \
     --no-sort --ansi \
-    --border-label=' sesh ' --prompt='  ' \
+    --border-label=' Sessions ' --prompt='  ' \
     --header='  ^a-all ^t-tmux ^g-cfgs ^s-find ^x-kill' \
     --bind='tab:down,btab:up' \
     --bind='ctrl-a:change-prompt( )+reload(sesh list --icons)' \
     --bind='ctrl-t:change-prompt( )+reload(sesh list -t --icons)' \
     --bind='ctrl-g:change-prompt( )+reload(sesh list -c --icons)' \
     --bind='ctrl-s:change-prompt( )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind='ctrl-x:execute(tmux kill-session -t {2..})+change-prompt( )+reload(sesh list --icons)' \
+    --bind='ctrl-x:execute(tmux kill-session -t {2..})+change-prompt( )+reload(sesh list --icons)' \
     --preview-window='right:65%' \
     --preview='sesh preview {}' \
     --color=border:#81A1C1 \
