style(tmux): remove unnecessary comments for cleaner config file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-#
 # Plugins
 #
 set -g @plugin 'tmux-plugins/tpm'
@@ -21,22 +20,16 @@ set -g @plugin 'tmux-plugins/tmux-sessionist'
 # - prefix + Ctrl-r - restore
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# Copy to the system clipboard in tmux.
-set -g @plugin 'tmux-plugins/tmux-yank'
-
+set -g @plugin 'tmux-plugins/tmux-yank' # Copy to the system clipboard in tmux.
 set -g @plugin 'akohlbecker/aw-watcher-tmux'
-
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
 # set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'kitty'
 
-#
 # Theme
 #
 set -g @plugin 'arcticicestudio/nord-tmux'
@@ -46,9 +39,8 @@ set -g status-left '#[fg=#2E3440,bg=#81A1C1,nobold] #S #[fg=#81A1C1,bg=#3B4252,n
 
 # Bindigs
 #
-# Use Ctrl-a as the prefix instead of default Ctrl-b
 set-option -g prefix C-a
-unbind-key C-b
+unbind-key C-b # Use Ctrl-a as the prefix instead of default Ctrl-b
 bind-key C-a send-prefix
 
 # Ctrl-a r to reload this config
@@ -117,6 +109,7 @@ unbind _
 # keep this line after run '~/.tmux/plugins/tpm/tpm'
 set -g status-right ''
 
+# sesh
 unbind-key s
 bind-key "s" run-shell "tmux run-shell \"sesh connect \\\"$(
   sesh list --icons | fzf-tmux -p 100%,100% \
