feat(tmux): add mouse scroll bindings for copy mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,6 +70,8 @@ set-option -g set-clipboard on
 set -g mouse on
 setw -g aggressive-resize on
 set -g @scroll-speed-num-lines-per-scroll "1"
+bind -T copy-mode-vi WheelUpPane send -N 1 -X scroll-up
+bind -T copy-mode-vi WheelDownPane send -N 1 -X scroll-down
 
 
 # This is required for vim colors to work correctly when ssh-ing to one server,
@@ -86,7 +88,7 @@ set -g focus-events on
 set -sg escape-time 0 # or maybe 10
 
 # bigger history size
-set -g history-limit 50000
+set -g history-limit 100000
 
 # status messages displayed for this many milliseconds
 set -g display-time 4000
