--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -342,7 +342,7 @@ modify_font cell_height 105%
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+scrollback_lines 10000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -353,7 +353,7 @@ modify_font cell_height 105%
 #: is changed it will only affect newly created windows, not existing
 #: ones.
 
-# scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
 #: Program with which to view scrollback in a new window. The
 #: scrollback buffer is passed as STDIN to this program. If you change
@@ -365,7 +365,7 @@ modify_font cell_height 105%
 #: set to 0 if there is no cursor, for example, when showing the last
 #: command output.
 
-# scrollback_pager_history_size 0
+scrollback_pager_history_size 64
 
 #: Separate scrollback history size (in MB), used only for browsing
 #: the scrollback buffer with pager. This separate buffer is not
@@ -378,12 +378,12 @@ modify_font cell_height 105%
 #: is changed it will only affect newly created windows, not existing
 #: ones.
 
-# scrollback_fill_enlarged_window no
+scrollback_fill_enlarged_window yes
 
 #: Fill new space with lines from the scrollback buffer after
 #: enlarging a window.
 
-# wheel_scroll_multiplier 5.0
+wheel_scroll_multiplier 1
 
 #: Multiplier for the number of lines scrolled by the mouse wheel.
 #: Note that this is only used for low precision scrolling devices,
@@ -400,7 +400,7 @@ wheel_scroll_min_lines 1
 #: when using the wheel. With a negative number, the minimum number of
 #: lines will always be added.
 
-# touch_scroll_multiplier 1.0
+touch_scroll_multiplier 1.0
 
 #: Multiplier for the number of lines scrolled by a touchpad. Note
 #: that this is only used for high precision scrolling devices on
@@ -1547,7 +1547,8 @@ background            #2e3440
 #: special value of ask means that kitty will ask before opening the
 #: link when clicked.
 
-shell_integration enabled
+# shell_integration enabled
+# shell_integration no-cursor
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
