feat(thumbfast): add configuration options for thumbnail settings

--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -5,3 +5,9 @@ MOUSE_BTN0 cycle pause
 ~ script-binding uosc/menu
 p script-binding uosc/playlist
 TAB script-binding uosc/toggle-ui
+
+CTRL+t script-message enable-sub-translator
+CTRL+T script-message disable-sub-translator
+ALT+t script-message sub-translated-only
+ALT+o script-message sub-primary-original
+ALT+b script-message benchmark-sub-translator
