feat(tmux): enhance session selection with updated icons and prompts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -114,12 +114,12 @@ set -g status-right ''
 # sesh
 unbind-key s
 bind-key "s" run-shell "tmux run-shell \"sesh connect \\\"$(
-  sesh list --icons | fzf-tmux -p 100%,100% \
+  sesh list -t --icons | fzf-tmux -p 100%,100% \
     --no-sort --ansi \
-    --border-label=' Sessions ' --prompt='  ' \
+    --border-label=' Sessions ' --prompt=' ' \
     --header='  ^a-all ^t-tmux ^g-cfgs ^s-find ^x-kill' \
     --bind='tab:down,btab:up' \
-    --bind='ctrl-a:change-prompt( )+reload(sesh list --icons)' \
+    --bind='ctrl-a:change-prompt( )+reload(sesh list --icons)' \
     --bind='ctrl-t:change-prompt( )+reload(sesh list -t --icons)' \
     --bind='ctrl-g:change-prompt( )+reload(sesh list -c --icons)' \
     --bind='ctrl-s:change-prompt( )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
