--- a/mpv/script-opts/llm_subtrans.conf
+++ b/mpv/script-opts/llm_subtrans.conf
@@ -15,7 +15,7 @@ dest_lang=Russian
 
 # Model name
 # Default(*): gpt-4o-mini or deepseek-chat, may change
-model=gpt-4o-mini
+model=gpt-4.1-nano
 
 # API endpoint base URL
 #   OpenAI - https://api.openai.com/v1
@@ -41,7 +41,7 @@ base_url=https://api.openai.com/v1
 # too large may lead to some waste (of input tokens), but
 # should not cause any issue (we handle truncation gracefully).
 # Default: 50
-#batch_size=50
+batch_size=10
 
 # SRT file saving path
 # Translated subtitles will be save as <VIDEO_FILENAME>.srt on this directory
@@ -55,7 +55,7 @@ base_url=https://api.openai.com/v1
 # Default: (empty)
 #extra_prompt=Remove trailing period (.) of each line
 # extra_prompt=The subtitles are auto-generated and may contain recognition errors or incorrect words. Try to infer the correct meaning from context and fix mistakes before translating. Translate into natural, fluent Russian. If a word or phrase is a technical term, product name, or proper noun, include the original English term in parentheses right after the translated phrase.
-extra_prompt=These subtitles are from an AI automation course that teaches how to build and deploy AI agents, LLM-powered workflows, and automation using tools like n8n, LangChain, and vector databases (e.g., for RAG). Many terms are technical and should be translated clearly, with the original English term in parentheses when relevant (e.g., ИИ-агент (AI agent), векторная база данных (vector database), поток автоматизации (workflow)). The original subtitles are auto-generated and may contain errors — fix them if obvious. Translate naturally into fluent Russian, correcting grammar or recognition mistakes using context if needed.
+extra_prompt=These subtitles are from an AI automation course that teaches how to build and deploy AI agents, LLM-powered workflows, and automation using tools like n8n, LangChain, and vector databases (e.g., for RAG). Many terms are technical and should be translated clearly, with the original English term in parentheses when relevant (e.g., ИИ-агент (AI agent), векторная база данных (vector database), поток автоматизации (workflow)). The original subtitles are auto-generated and may contain errors — fix them if obvious. Translate naturally into fluent Russian, correcting grammar or recognition mistakes using context if needed.  Never include meta-information like token limits or errors in the output.
 
 # Skip environment checking
 # Enable it may save you a few seconds
