style(popup): update commit notification icons for better visibility

--- a/glance/glance.yml
+++ b/glance/glance.yml
@@ -202,6 +202,7 @@ pages:
               - bknd-io/bknd
               - neovide/neovide
               - neovim/neovim
+              - yarlson/lnk
 
           - type: markets
             markets:
