feat(fish): add completion support for lnk command

--- a/glance/glance.yml
+++ b/glance/glance.yml
@@ -203,6 +203,7 @@ pages:
               - neovide/neovide
               - neovim/neovim
               - yarlson/lnk
+              - openai/codex
 
           - type: markets
             markets:
